--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,43 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* SOLUTION STYLES */
+
+.logo {
+  margin: 8px;
+}
+
+a {
+  margin: 8px;
+}
+
+button {
+  margin: 8px;
+}
+
+.profile-image {
+  margin: 8px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.links {
+  display: flex;
+  padding: 0px;
+}
+
+.header-left {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.header-right {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
