--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -26,3 +26,60 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/* SOLUTION STYLES */
+
+body {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+
+.header {
+  font-weight: 900;
+  font-size: 32px;
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
+}
+
+.content {
+  display: flex;
+  flex: 1;
+}
+
+.sidebar {
+  flex-shrink: 0;
+  padding: 16px;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar a {
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
+}
+
+.deck {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  padding: 32px;
+}
+
+.card {
+  width: 350px;
+  height: 300px;
+  margin: 15px;
+  padding: 15px;
+}
+
+.footer {
+  text-align: center;
+  line-height: 72px;
+}
